--- a/notebooks/nb_94_Offline_RL_theory.ipynb
+++ b/notebooks/nb_94_Offline_RL_theory.ipynb
@@ -470,7 +470,9 @@
     "\n",
     "<img src=\"_static/images/nb_94_ood_examples.png\" alt=\"KL divergence\" width=80%>\n",
     "\n",
-    "But at the same time, **we also want the policies to be close enough near to o.o.d. regions for the reasons already discussed** (fig-c)."
+    "But at the same time, **we also want the policies to be close enough near to o.o.d. regions for the reasons already discussed** (fig-c).\n",
+    "\n",
+    "**Note**: This type of control over missing and o.o.d. data is something that cannot be achieved with imitation learning."
    ]
   },
   {
@@ -556,7 +558,7 @@
     "<img src=\"_static/images/96_policy_constraint_DKL.png\" alt=\"KL divergence\" width=60%>\n",
     "<div class=\"slide title\"> Fig.2: DKL divergence's effect on out-of-distribution data </div>\n",
     "\n",
-    "The $D_{KL}$ divergence discourages undesired o.o.d actions, as in case (b), yet encourages important o.o.d actions, as in case (a), crucial for enhancing the learned policy. This ensures that state distributions $d_{\\pi}(s)$ and $d_{\\pi_{\\beta}}(s)$ are close around a given state $s$, so the distributional shift won't be to large. In contrast, case (b) will typically exhibits a large distributional shift. "
+    "**To summarize**: The $D_{KL}$ divergence discourages undesired o.o.d actions, as in case (b), yet encourages important o.o.d actions, as in case (a), crucial for enhancing the learned policy. This ensures that state distributions $d_{\\pi}(s)$ and $d_{\\pi_{\\beta}}(s)$ are close around a given state $s$, so the distributional shift won't be too large. In contrast, case (b) will typically exhibits a large distributional shift. "
    ]
   },
   {
@@ -655,6 +657,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary** \n",
+    "\n",
+    "**Direct constraint methods assume you have access to the behavior policy.**\n",
+    "\n",
+    "They are typically of two kinds:\n",
+    "\n",
+    "- Constraint on distribution: easy to implement and generally effective, but they can sometime be too conservative.\n",
+    "\n",
+    "- Constraint on support: a good choice when the behavior policy deviates significantly from optimality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -663,20 +680,20 @@
    "source": [
     "#### b) Implicit \n",
     "\n",
-    "**We don't need $\\pi_\\beta$, and we can work directly with our data $D$**\n",
-    "\n",
-    "Useful in complex high dimensional spaces where BC of behavioral policy is not accurate.\n",
+    "**We don't need $\\pi_\\beta$, and we can work directly with our data $D$**. Useful in complex high dimensional spaces where the BC of the behavioral policy is not accurate.\n",
     "\n",
     "First we assume that we have $\\pi_\\beta$ (we will integrate it out later). **We maximize the difference reward**:\n",
     "\n",
-    "$\n",
-    "\\begin{equation}\n",
-    "\\eta(\\pi) = J(\\pi) - J(\\pi_\\beta) \\quad \\hbox{with} \\quad J (\\pi) = \\mathbb{E}_{\\tau \\sim \\pi}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right] \n",
+    "$$\n",
+    "\\begin{align}\n",
+    "max_\\pi \\eta(\\pi) &= max_\\pi ( J(\\pi) - J(\\pi_\\beta) ) \\qquad \\hbox{with} \\quad J (\\pi) = \\mathbb{E}_{\\tau \\sim \\pi}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right] \\\\ \\text{s.t.} \\quad &D_{KL}(\\pi(\\cdot|s) || \\pi_\\beta(\\cdot|s) ) \\leq \\epsilon\n",
     "\\tag{2}\n",
-    "\\end{equation}\n",
-    "$\n",
+    "\\end{align}\n",
+    "$$\n",
     "\n",
-    "so as higher $\\eta(\\pi)$ the better $\\pi$ ."
+    "so as higher $\\eta(\\pi)$ the better $\\pi$ . \n",
+    "\n",
+    "**Note**: This is a slightly different idea than what we usually follow to find the policy that maximizes the discounted reward."
    ]
   },
   {
@@ -691,16 +708,14 @@
     "\n",
     "$\n",
     "\\begin{equation}\n",
-    "\\eta(\\pi) = \\mathbb{E}_{s \\sim d^{\\pi}(s)} \\mathbb{E}_{a \\sim \\pi(a|s)} [A^{\\pi_\\beta}(s, a)] \\\\ \\text{s.t.} \\quad D_{KL}(\\pi(\\cdot|s) || \\pi_\\beta(\\cdot|s) ) \\leq \\epsilon\n",
+    "max_\\pi \\eta(\\pi) = max_\\pi \\mathbb{E}_{s \\sim d^{\\pi}(s)} \\mathbb{E}_{a \\sim \\pi(a|s)} [A^{\\pi_\\beta}(s, a)] \\\\ \\text{s.t.} \\quad D_{KL}(\\pi(\\cdot|s) || \\pi_\\beta(\\cdot|s) ) \\leq \\epsilon\n",
     "\\tag{3}\n",
     "\\end{equation}\n",
     "$\n",
     "\n",
     "with $A^{\\pi_\\beta}(s, a) = Q^{\\pi_\\beta}(s, a) -V^{\\pi_\\beta}(s)$ the Advantage function.\n",
     "\n",
-    "As we will shown next, eq.3 will give us the optimal policy. \n",
-    "\n",
-    "Also note that to compute equation 3, we need $Q^{\\pi_\\beta}(s, a)$, so we could use the dynamic programming evaluation step introduced before."
+    "As we will shown next, eq.3 will give us the optimal policy. "
    ]
   },
   {
@@ -740,7 +755,7 @@
     "\n",
     "This is in perfect agreement with out previous interpretation in fig.5.\n",
     "\n",
-    "**Finally, as said before, these kind of methods implement an evaluation step, and eq.4, plays the role of the improvement step.**"
+    "**Finally, note that to compute equation 3, we need $Q^{\\pi_\\beta}(s, a)$, so we could use the dynamic programming evaluation step introduced before, where eq.4, plays the role of the improvement step.**."
    ]
   },
   {
