--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -287,6 +287,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Offline RL pipeline:\n",
+    "\n",
+    "<img src=\"_static/images/93_offline_RL_pipeline.png\" alt=\"Snow\" style=\"width:50%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -316,23 +325,18 @@
     "\n",
     "(This could be a realistic situation where you could have only a few human expert data available and the rest of the data is collected through a far from optimal policy.)\n",
     "\n",
-    "**We will use in this example as off-policy RL policy, the Deep Q-Network (DQN) algorithm,** that we introduced in the online RL section. As the DQN agent cannot interact with the environment we will feed the collected data through a ReplyBuffer, similarly as we did before in the imitation learning example.\n",
+    "**We will use in this example as RL policy, the off-policy Deep Q-Network (DQN) algorithm,** that we introduced in the online RL section. As the DQN agent cannot interact with the environment we will feed the collected data through a ReplyBuffer, similarly as we did before in the imitation learning example.\n",
     "\n",
     "\n",
     "Exercise: (Give a look to the imitation learning exercise)\n",
     "\n",
-    "1 - **We will use the 8x8 grid environment with a vertical obstacle : ObstacleTypes.dqn_obstacle_8x8**.\n",
+    "**STEP 1**: We will use the 8x8 grid environment with a vertical obstacle : ObstacleTypes.dqn_obstacle_8x8.\n",
     "\n",
-    "2 - **The policies: behavior_8x8_eps_greedy_4_0_to_7_7 and behavior_8x8_deterministic_4_0_to_7_7)**\n",
+    "**STEP 2**: Use the behavior policies, behavior_8x8_eps_greedy_4_0_to_7_7 and behavior_8x8_deterministic_4_0_to_7_7). For the dataset collection create a Minari combined dataset.\n",
     "\n",
-    "3 - **For the dataset collection give a look to the solution**, specifically to the points:\n",
+    "**STEP 3**: Feed the data to the Tianshou replay buffer as we did in nb_94.\n",
     "\n",
-    "- Configure the two datasets\n",
-    "- Create Minari combined datasets \n",
-    "\n",
-    "as we will fuse the two datasets coming from different policies into a single one (as you should do in a real problem)\n",
-    "\n",
-    "4 - **Do the training using as policy BehaviorPolicyType.dqn to have a felling of how good (or how bad) is an offpolicy algorithm to deal with collected data.**"
+    "**STEP 4**: Do the training using the off-policy Deep Q-Network (DQN) 'BehaviorPolicyType.dqn'."
    ]
   },
   {
@@ -348,13 +352,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "**Create the environment**"
+    "#### STEP 1: Create the environment"
    ]
   },
   {
@@ -386,13 +386,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STEP 2: Create Minari datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "**Configure and rendering policies**"
+    "**Data collection configuration**"
    ]
   },
   {
@@ -402,6 +409,7 @@
    "outputs": [],
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
+    "#BEHAVIOR_POLICY_I = BehaviorPolicyType.random\n",
     "DATA_SET_IDENTIFIER_I = \"_suboptimal\"\n",
     "NUM_STEPS_I = 8000\n",
     "\n",
@@ -446,18 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create single Minari dataset**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "( give a look to **create_combined_minari_dataset(...)** ) "
+    "**Create Minari dataset**"
    ]
   },
   {
@@ -480,6 +477,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### STEP 3: Feed dataset to ReplayBuffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_combined_dataset = config_combined_data.data_set_name\n",
+    "buffer_data = load_buffer_minari(name_combined_dataset)\n",
+    "data_size = len(buffer_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**check state-action distribution**"
    ]
   },
@@ -489,12 +504,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create Buffers with minari datasets\n",
-    "name_combined_dataset = config_combined_data.data_set_name\n",
-    "\n",
-    "buffer_data = load_buffer_minari(name_combined_dataset)\n",
-    "data_size = len(buffer_data)\n",
-    "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
     "snapshot_env(env)"
@@ -504,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**offline policy training**"
+    "#### STEP 4-5: Select offline policy and training"
    ]
   },
   {
@@ -522,7 +531,7 @@
     "    policy_name=POLICY_NAME,\n",
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -572,9 +581,7 @@
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
     "\n",
-    "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
-    "# load the weights\n",
     "name_expert_data = offline_policy_config.name_expert_data\n",
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
@@ -646,7 +653,7 @@
     "    env,\n",
     "    policy,\n",
     "    num_episodes=NUM_EPISODES,\n",
-    "    logits_sampling=True,\n",
+    "    logits_sampling=False,\n",
     ")\n",
     "\n",
     "snapshot_env(env)"
@@ -679,45 +686,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_2D_grid_initial_config.obstacles = ObstacleTypes.obst_free_8x8\n",
-    "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode), env_config=env_2D_grid_initial_config)\n",
-    "\n",
-    "offpolicy_rendering(\n",
-    "    env_or_env_name=env,\n",
-    "    render_mode=render_mode,\n",
-    "    policy_model=policy,\n",
-    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
-    "    imitation_policy_sampling=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "**1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too,\n",
-    "expert data ~ 30000).**\n",
-    "\n",
-    "Is the policy better? Why?\n",
-    "\n",
-    "Remove the walls and see what happens, i.e:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
    "outputs": [],
    "source": [
     "env_2D_grid_initial_config.obstacles = ObstacleTypes.obst_free_8x8\n",
