--- a/notebooks/nb_96_Offline_rl_exercises.ipynb
+++ b/notebooks/nb_96_Offline_rl_exercises.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
-    "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode, register_grid_envs\n",
+    "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode, register_grid_envs, EnvFactory\n",
     "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    create_combined_minari_dataset \n",
@@ -292,6 +292,7 @@
     "from training_rl.offline_rl.utils import load_buffer_minari\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import MinariDatasetConfig\n",
     "from training_rl.offline_rl.visualizations.utils import policy_rollout_torcs_env, compare_policy_decisions_vs_expert_suggestions\n",
+    "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import create_minari_datasets\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
@@ -353,7 +354,7 @@
     }
    },
    "source": [
-    "We also discussed one of the major issues when applying off-policy methods to collected data: the agent's tendency to go out-of-distribution (o.o.d.). More importantly, once it goes o.o.d., the policy becomes unpredictable, making it impossible to return to the in-distribution region. This unpredictability propagates errors in the policy evaluation process (i.e., the dynamic programming equations), hindering the algorithm's learning capabilities."
+    "We also discussed one of the major issues when applying off-policy methods to collected data: the agent's tendency to go out-of-distribution (o.o.d.). More importantly, once it goes o.o.d., the policy becomes unpredictable, making it impossible to return to the in-distribution region. This unpredictability propagates errors in the policy evaluation process (i.e., the dynamic programming equations), destroying the algorithm's learning capabilities."
    ]
   },
   {
@@ -572,7 +573,18 @@
     "\n",
     "Note that we have four peaks. The ones at (2,7) and (3,7) come from policy-I, which goes towards the target but stops before reaching it. The other two peaks at (6,0) and (7,0) are produced by policy-II, which drifts the agent to the left with noise. **It is important to notice that the amount of collected data at state (5,7) is very little, but this state is crucial if we want to approach the target.**\n",
     "\n",
-    "What do you think a BC algorithm would do? What about an offline one?"
+    "What do you think a BC algorithm would do? What about an offline one?\n",
+    "\n",
+    "<div style=\"margin-top: 20px;\">\n",
+    "    <div style=\"display: flex; justify-content: space-between;\">\n",
+    "        <div style=\"width: 100%;\">\n",
+    "            <img src=\"_static/images/nb_96_critical_state.png\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "        </div>\n",
+    "        <div style=\"width: 100%;\">\n",
+    "            <img src=\"_static/images/96_critical_action_states.png\" alt=\"KL divergence\" width=80%>\n",
+    "        </div>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -583,7 +595,7 @@
     }
    },
    "source": [
-    "### STEP 4-5: Select offline policies and trained them\n",
+    "### STEP 4-5: Select offline policies and training\n",
     "\n",
     "In this part of the exercise you need to: \n",
     "\n",
@@ -677,6 +689,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "offline_policy_config.policy_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
@@ -750,7 +771,7 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=100,\n",
     "    imitation_policy_sampling=False,\n",
-    "    inline=False\n",
+    "    inline=True\n",
     ")"
    ]
   },
@@ -799,7 +820,7 @@
     }
    },
    "source": [
-    "We will start again with the previous setup. So, as we did before, we will create again two datasets: one from a policy moving suboptimal from (0,0) to (7,0), and the other from another policy moving from (4,0) to (7,7). The goal is to find an agent capable of connecting trajectories coming from both datasets, in order to find the optimal path between (0,0) and (7,7)."
+    "We will start again with the previous setup. So, as we did before, we will create again two datasets: one from a policy moving suboptimal from (0,0) to (7,0), and the other from another policy moving from (4,0) to (7,7). The goal is to find an agent capable of connecting trajectories coming from both datasets, in order to find the optimal path between (0,0) and (4,7)."
    ]
   },
   {
@@ -829,19 +850,22 @@
     "\n",
     "OBSTACLE = ObstacleTypes.obst_free_8x8\n",
     "INITIAL_STATE_POLICY_I = (0,0)\n",
+    "FINAL_STATE_POLICY_I = (3, 7)\n",
+    "\n",
     "INITIAL_STATE_POLICY_II = (4,0)\n",
-    "FINAL_STATE = (7, 7)\n",
+    "FINAL_STATE_POLICY_II = (7, 7)\n",
+    "\n",
     "\n",
     "env_2D_grid_initial_config_I = Grid2DInitialConfig(\n",
     "    obstacles=OBSTACLE,\n",
     "    initial_state=INITIAL_STATE_POLICY_I,\n",
-    "    target_state=FINAL_STATE,\n",
+    "    target_state=FINAL_STATE_POLICY_I,\n",
     ")\n",
     "\n",
     "env_2D_grid_initial_config_II = Grid2DInitialConfig(\n",
     "    obstacles=OBSTACLE,\n",
     "    initial_state=INITIAL_STATE_POLICY_II,\n",
-    "    target_state=FINAL_STATE,\n",
+    "    target_state=FINAL_STATE_POLICY_II,\n",
     ")\n",
     "\n",
     "\n",
@@ -849,8 +873,8 @@
     "                                          env_config=env_2D_grid_initial_config_I)\n",
     "snapshot_env(env)\n",
     "\n",
-    "env.set_starting_point(INITIAL_STATE_POLICY_II)\n",
-    "\n",
+    "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode),\n",
+    "                                          env_config=env_2D_grid_initial_config_II)\n",
     "snapshot_env(env)"
    ]
   },
@@ -880,13 +904,13 @@
     "# Dataset I\n",
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_grid_deterministic_0_0_to_4_7\n",
     "DATA_SET_IDENTIFIER_I = \"_move_downwards\"\n",
-    "NUM_STEPS_I = 1000\n",
+    "NUM_STEPS_I = 1500\n",
     "\n",
     "# Dataset II\n",
     "#BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_move_deterministic\"\n",
-    "NUM_STEPS_II = 200"
+    "NUM_STEPS_II = 1000"
    ]
   },
   {
@@ -953,8 +977,15 @@
     "        env_2d_grid_initial_config = (env_2D_grid_initial_config_I, env_2D_grid_initial_config_II),\n",
     ")\n",
     "buffer_data = load_buffer_minari(config_combined_data.data_set_name)\n",
-    "data_size = len(buffer_data)\n",
-    "\n",
+    "data_size = len(buffer_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset_availables = [config_combined_data.data_set_name] + config_combined_data.children_dataset_names\n",
     "selected_data_set = widget_list(dataset_availables)"
    ]
@@ -1032,7 +1063,7 @@
    "source": [
     "# Offiline - Training\n",
     "\n",
-    "NUM_EPOCHS =10\n",
+    "NUM_EPOCHS =5\n",
     "BATCH_SIZE = 128\n",
     "STEP_PER_EPOCH = 1.0*len_buffer\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -1044,6 +1075,7 @@
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
     ")\n",
+    "offline_policy_config.minari_dataset_config.initial_config_2d_grid_env.target_state=(7,7)\n",
     "\n",
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
@@ -1160,31 +1192,109 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "**Select the dataset**"
+    "#### STEP 1: Create TORCS Environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-09T19:53:48.933903Z",
-     "start_time": "2024-05-09T19:53:48.918712Z"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "collected_datasets_names = [\"torcs-data-v0\"]\n",
-    "collected_datasets = widget_list(collected_datasets_names)"
+    "ENV_NAME = EnvFactory.torcs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STEP 2: Create Minari dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Select TORCS behavior policies and visualize them**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_selected_to_visualize = widget_list([\n",
+    "    BehaviorPolicyType.torcs_drunk_driver_policy\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offpolicy_rendering(\n",
+    "    env_or_env_name=ENV_NAME,\n",
+    "    render_mode=None,\n",
+    "    behavior_policy_name=policy_selected_to_visualize.value,\n",
+    "    num_frames=4000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Collect dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure the policy\n",
+    "BEHAVIOR_POLICY = policy_selected_to_visualize.value\n",
+    "DATA_SET_IDENTIFIER = \"torcs_crash\"\n",
+    "NUM_STEPS = 4000\n",
+    "\n",
+    "config_torcs_data_set = create_minari_datasets(\n",
+    "    env_name=ENV_NAME,\n",
+    "    dataset_identifier=DATA_SET_IDENTIFIER,\n",
+    "    num_colected_points=NUM_STEPS,\n",
+    "    behavior_policy_name=BEHAVIOR_POLICY,\n",
+    ")\n",
+    "\n",
+    "_ = os.system(\"pkill torcs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STEP 3: Feed dataset to replay buffer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_SET_NAME = config_torcs_data_set.data_set_name\n",
+    "buffer_data = load_buffer_minari(DATA_SET_NAME)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STEP 4-5: Select offline policy and training"
    ]
   },
   {
@@ -1215,13 +1325,10 @@
     "NUM_EPOCHS = 2\n",
     "BATCH_SIZE = 128\n",
     "NUMBER_TEST_ENVS = 1\n",
-    "EXPLORATION_NOISE = True\n",
-    "SEED = None  # 1626\n",
     "PERCENTAGE_DATA_PER_EPOCH = 1.0\n",
     "DEVICE = \"cuda\"\n",
     "\n",
     "OFFLINE_POLICY_NAME = PolicyName.bcq_continuous\n",
-    "DATA_SET_NOISY_NAME = collected_datasets.value\n",
     "TRAINED_POLICY_NAME = \"policy_bcq.pt\""
    ]
   },
@@ -1233,7 +1340,7 @@
     }
    },
    "source": [
-    "**Feed data into replay buffer**"
+    "**Offline RL policy metadata config**"
    ]
   },
   {
@@ -1250,11 +1357,8 @@
    },
    "outputs": [],
    "source": [
-    "buffer_data = load_buffer_minari(DATA_SET_NOISY_NAME)\n",
-    "data_config = MinariDatasetConfig.load_from_file(DATA_SET_NOISY_NAME)\n",
-    "\n",
     "offline_policy_config = TrainedPolicyConfig(\n",
-    "    name_expert_data=DATA_SET_NOISY_NAME,\n",
+    "    name_expert_data=DATA_SET_NAME,\n",
     "    policy_name= OFFLINE_POLICY_NAME,\n",
     "    device=DEVICE\n",
     ")"
@@ -1337,7 +1441,7 @@
    "outputs": [],
    "source": [
     "trained_bcq_policy = restore_trained_offline_policy(offline_policy_config)\n",
-    "log_name = os.path.join(DATA_SET_NOISY_NAME, OFFLINE_POLICY_NAME)\n",
+    "log_name = os.path.join(DATA_SET_NAME, OFFLINE_POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "trained_bcq_policy.load_state_dict(torch.load(str(os.path.join(log_path, trained_policy_selected.value)), map_location=\"cpu\"))\n",
     "trained_bcq_policy\n",
@@ -1346,7 +1450,7 @@
     "    env_or_env_name=\"torcs\",\n",
     "    render_mode=None,\n",
     "    policy_model=trained_bcq_policy,\n",
-    "    num_frames=3500,\n",
+    "    num_frames=4000,\n",
     ")"
    ]
   },
@@ -1413,7 +1517,7 @@
     "num_bins = 60\n",
     "actions_bcq_policy = output_initial_phase[\"actions_driver\"]\n",
     "_ = plt.hist(actions_bcq_policy, bins=num_bins, alpha=0.5, label='bcq actions')\n",
-    "_ = plt.hist(buffer_data.act, bins=num_bins, alpha=0.5, label='expert actions')\n",
+    "_ = plt.hist(buffer_data.act, bins=num_bins, alpha=0.5, label='data actions')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1537,7 +1641,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "396.2px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
